--- a/PrinterySystem/Views/Person4Manager/CustomerInfo.cshtml
+++ b/PrinterySystem/Views/Person4Manager/CustomerInfo.cshtml
@@ -25,7 +25,7 @@
             <div class="col-md-8 text-right my-2 my-lg-0">
                 <button class="btn btn-primary" data-toggle="modal" data-target="#editModal" data-title="快速下單">
                     <fa class="fa fa-shopping-cart"></fa>
-                    快速下單
+                    添加客户
                 </button>
             </div>
         </div>
@@ -42,154 +42,58 @@
                     <th class="text-center">操作</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>12asa1211</td>
-                    <td>XX有限公司</td>
-                    <td>
-                        陈先生
-                    </td>
-                    <td>212-1231421</td>
-                    <td>13078965432</td>
-                    <td>XX省XX市XX街道XX号</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
-                            <button type="button" class="btn btn-outline-secondary">查看</button>
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    ...
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Other action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>12asa1211</td>
-                    <td>XX有限公司</td>
-                    <td>
-                        陈先生
-                    </td>
-                    <td>212-1231421</td>
-                    <td>13078965432</td>
-                    <td>XX省XX市XX街道XX号</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
-                            <button type="button" class="btn btn-outline-secondary">查看</button>
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    ...
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Other action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>12asa1211</td>
-                    <td>XX有限公司</td>
-                    <td>
-                        陈先生
-                    </td>
-                    <td>212-1231421</td>
-                    <td>13078965432</td>
-                    <td>XX省XX市XX街道XX号</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
-                            <button type="button" class="btn btn-outline-secondary">查看</button>
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    ...
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Other action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>12asa1211</td>
-                    <td>XX有限公司</td>
-                    <td>
-                        陈先生
-                    </td>
-                    <td>212-1231421</td>
-                    <td>13078965432</td>
-                    <td>XX省XX市XX街道XX号</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
-                            <button type="button" class="btn btn-outline-secondary">查看</button>
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    ...
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Other action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>12asa1211</td>
-                    <td>XX有限公司</td>
-                    <td>
-                        陈先生
-                    </td>
-                    <td>212-1231421</td>
-                    <td>13078965432</td>
-                    <td>XX省XX市XX街道XX号</td>
-                    <td class="text-center">
-                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
-                            <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#editModal" data-title="編輯 超纖細肥皂 1盒" data-backdrop="static">編輯</button>
-                            <button type="button" class="btn btn-outline-secondary">查看</button>
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    ...
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Other action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item text-danger" href="#" data-toggle="modal" data-target="#removeModal" data-title="超纖細肥皂 1盒">刪除</a>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
+            @{
+                var list = ViewBag.CustomerList as List<Printery.Domain.ViewModel.CustomerViewModel>;
+                if (list != null && list.Count > 0)
+                {
+                    <tbody>
+                        @{
+                            foreach (var item in list)
+                            {
+                                <tr>
+                                    <td class="td1 guid">
+                                        @Html.DisplayFor(modelitem => item.CustomerId)
+                                    </td>
+                                    <td class="td1">
+                                        @Html.DisplayFor(modelitem => item.CustomerName)
+                                    </td>
+                                    <td class="td1">
+                                        <a href="#">@Html.DisplayFor(modelitem => item.Contact)</a>
+                                        <span class="badge badge-pill badge-danger">熟客</span>
+                                    </td>
+                                    <td class="td1">
+                                        @Html.DisplayFor(modelitem => item.Phone)
+                                    </td>
+                                    <td class="td1">
+                                        @Html.DisplayFor(modelitem => item.MobilePhone)
+                                    </td>
+                                    <td class="text-center td1">
+                                        @Html.DisplayFor(modelitem => item.CAddress)
+                                    </td>
+                                    <td class="text-center">
+                                        <div class="btn-group btn-group-sm" role="group" aria-label="action">
+                                            <button type="button" class="btn btn-outline-secondary ProOrderbtn">处理</button>
+                                            <button type="button" class="btn btn-outline-secondary delbtn">删除</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                }
+
+            }
+
         </table>
 
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-            </ul>
-        </nav>
+        @{
+
+            if (list != null && list.Count > 0)
+            {
+                @Html.Partial("Pager")
+
+            }
+        }
     </div>
 
     <footer class="mt-5 py-3 bg-light text-secondary text-center">
