--- a/PrinterySystem/Views/SystemOp/ProductSet.cshtml
+++ b/PrinterySystem/Views/SystemOp/ProductSet.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Views/Shared/_LayoutSys.cshtml";
+    Layout = null;
 }
 
 <!DOCTYPE html>
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-
+    
     </div>
 </body>
 </html>
