--- a/PrinterySystem/Views/Person4Manager/MyInfoEdit.cshtml
+++ b/PrinterySystem/Views/Person4Manager/MyInfoEdit.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     Layout = "~/Views/Shared/_LayoutSysManager.cshtml";
+    ViewBag.Title = "编辑个人信息";
 }
+@model Printery.Domain.ViewModel.EmployeeViewModel
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
@@ -19,150 +21,75 @@
             <h2>个人信息</h2>
             <p class="lead">用户个人信息</p>
         </div>
+        @using (Html.BeginForm())
+        {
+            <div class="row">
+                <div class="col-md-12 order-md-1">
+                    <h4 class="mb-3">个人信息</h4>
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <form class="needs-validation" novalidate="">
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="firstName">姓名</label>
+                                @Html.TextBoxFor(model => model.Ename, htmlAttributes:new { @class="form-control"})
+                                @Html.ValidationMessageFor(model => model.Ename, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="lastName">性别</label>
+                                @Html.TextBoxFor(model => model.Sex, htmlAttributes:new { @class="form-control"})
+                                @Html.ValidationMessageFor(model => model.Sex, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="username">民族</label>
+                                @Html.TextBoxFor(model => model.Nation, htmlAttributes:new { @class="form-control"})
+                                @Html.ValidationMessageFor(model => model.Nation, "", new { @class = "text-danger" })
+                            </div>
 
-        <div class="row">
-            @*<div class="col-md-4 order-md-2 mb-4">
-                <h4 class="d-flex justify-content-between align-items-center mb-3">
-                    <span class="text-muted">Today</span>
-                    <span class="badge badge-secondary badge-pill">今日提醒</span>
-                </h4>
-                <ul class="list-group mb-3">
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">今日新增订单</h6>
-                            <small class="text-muted">New</small>
-                        </div>
-                        <span class="text-muted">23231</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">待处理订单</h6>
-                            <small class="text-muted">Wait</small>
-                        </div>
-                        <span class="text-muted">1231</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">已处理订单</h6>
-                            <small class="text-muted">Done</small>
-                        </div>
-                        <span class="text-muted">1231</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between bg-light">
-                        <div class="text-success">
-                            <h6 class="my-0">您已处理订单</h6>
-                            <small class="text-muted">You have done</small>
-                        </div>
-                        <span class="text-success">123</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between">
-                        <span>Total (USD)</span>
-                        <strong>$20</strong>
-                    </li>
-                </ul>
-
-                <form class="card p-2">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="雇员ID">
-                        <div class="input-group-append">
-                            <button type="submit" class="btn btn-secondary">搜索</button>
-                        </div>
-                    </div>
-                </form>
-            </div>*@
-            <div class="col-md-12 order-md-1">
-                <h4 class="mb-3">个人信息</h4>
-                <form class="needs-validation" novalidate="">
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label for="firstName">姓名</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="输入姓名" value="" required="">
-                            <div class="invalid-feedback">
-                                Valid first name is required.
+                            <div class="col-md-6 mb-3">
+                                <label for="email">QQ <span class="text-muted">(Optional)</span></label>
+                                @Html.TextBoxFor(model => model.QQ, htmlAttributes:new { @class="form-control"})
+                                @Html.ValidationMessageFor(model => model.QQ, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="lastName">性别</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="输入性别" value="" required="">
-                            <div class="invalid-feedback">
-                                Valid last name is required.
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="address">部门</label>
+                                @Html.TextBoxFor(model => model.Department, htmlAttributes:new { @class="form-control",@readonly = "readonly"})
+                                @Html.ValidationMessageFor(model => model.Department, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="address">电话</label>
+                                @Html.TextBoxFor(model => model.Phone, htmlAttributes:new { @class="form-control"})
+                                @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label for="username">民族</label>
-                            <input type="text" class="form-control" id="username" placeholder="输入民族" required="">
-                            <div class="invalid-feedback" style="width: 100%;">
-                                Your username is required.
-                            </div>
+                        <div class="mb-3">
+                            <label for="address2">用户组 <span class="text-muted">(Optional)</span></label>
+                            @Html.TextBoxFor(model => model.UserGroup, htmlAttributes: new { @class = "form-control",@readonly = "readonly"})
+                            @Html.ValidationMessageFor(model => model.UserGroup, "", new { @class = "text-danger" })
                         </div>
 
-                        <div class="col-md-6 mb-3">
-                            <label for="email">QQ <span class="text-muted">(Optional)</span></label>
-                            <input type="email" class="form-control" id="email" placeholder="输入QQ">
-                            <div class="invalid-feedback">
-                                Please enter a valid email address for shipping updates.
+                        <div class="row">
+                            <div class="col-md-5 mb-3">
+                                <label>用户ID</label>
+                                @Html.TextBoxFor(model => model.EmpId, htmlAttributes: new { @class = "form-control", @readonly = "readonly" })
+                                @Html.ValidationMessageFor(model => model.EmpId, "", new { @class = "text-danger" })
+                            </div>
+                            <div class="col-md-4 mb-3">
+                            </div>
+                            <div class="col-md-3 mb-3">
                             </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label for="address">部门</label>
-                            <input type="text" class="form-control" id="address" placeholder="选择部门" required="">
-                            <div class="invalid-feedback">
-                                Please enter your shipping address.
-                            </div>
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="address">电话</label>
-                            <input type="text" class="form-control" id="address" placeholder="输入电话" required="">
-                            <div class="invalid-feedback">
-                                Please enter your shipping address.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="address2">用户组 <span class="text-muted">(Optional)</span></label>
-                        <input type="text" class="form-control" id="address2" placeholder="当前用户组">
-                    </div>
+                        <hr class="mb-4">
 
-                    <div class="row">
-                        <div class="col-md-5 mb-3">
-                            <label for="country">国家</label>
-                            <select class="custom-select d-block w-100" id="country" required="">
-                                <option value="">Choose...</option>
-                                <option>United States</option>
-                            </select>
-                            <div class="invalid-feedback">
-                                Please select a valid country.
-                            </div>
-                        </div>
-                        <div class="col-md-4 mb-3">
-                            <label for="state">省市</label>
-                            <select class="custom-select d-block w-100" id="state" required="">
-                                <option value="">Choose...</option>
-                                <option>California</option>
-                            </select>
-                            <div class="invalid-feedback">
-                                Please provide a valid state.
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-3">
-                            <label for="zip">邮政编码</label>
-                            <input type="text" class="form-control" id="zip" placeholder="" required="">
-                            <div class="invalid-feedback">
-                                Zip code required.
-                            </div>
-                        </div>
-                    </div>
-                    <hr class="mb-4">
-
-                    <hr class="mb-4">
-                    <button class="btn btn-primary btn-lg btn-block" type="submit">完成编辑</button>
-                </form>
+                        <hr class="mb-4">
+                        <button class="btn btn-primary btn-lg btn-block" type="submit">完成编辑</button>
+                    </form>
+                </div>
             </div>
-        </div>
+        }
     </div>
 
 </body>
